--- a/.env.local
+++ b/.env.local
@@ -9,7 +9,9 @@ VITE_BASE_URL='http://192.168.1.50:48080'
 # 文件上传类型：server - 后端上传， client - 前端直连上传，仅支持 S3 服务
 VITE_UPLOAD_TYPE=server
 # 上传路径
-VITE_UPLOAD_URL='http://www.cricketld.com/admin-api/infra/file/upload'
+VITE_UPLOAD_URL='https://mall.cricketld.com/admin-api/infra/file/upload'
+
+VITE_UPLOAD_VODEO_URL='https://mall.cricketld.com/admin-api/infra/file/uploadVideo'
 
 # 接口地址
 VITE_API_URL=/admin-api
