--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "xingyu",
   "private": false,
   "scripts": {
+    "cz": "czg emoji",
     "i": "pnpm install",
     "dev": "vite",
     "dev-server": "vite --mode dev",
@@ -73,7 +74,7 @@
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.0.1",
+    "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.0.0",
     "@iconify/json": "^2.2.187",
     "@intlify/unplugin-vue-i18n": "^2.0.0",
@@ -93,7 +94,9 @@
     "autoprefixer": "^10.4.17",
     "bpmn-js": "8.9.0",
     "bpmn-js-properties-panel": "0.46.0",
+    "commitlint-config-git-commit-emoji": "^1.0.0",
     "consola": "^3.2.3",
+    "czg": "^1.11.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-define-config": "^2.1.0",
